# semantic-food-search

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: eval_report.md
scripts/: _bootstrap.py  demo.py  distill_reranker.py  evaluate.py  export_colab_data.py  multiview_search.py  recall_boost.py  run_search.py
src/food_search/: __init__.py  config.py  data.py  embedders.py  evaluation.py  rerank.py  retrieval.py
tests/: test_core.py
