[project]
name = "food-search"
version = "1.0.0"
description = "Semantic search over a Portuguese food catalog (hybrid BM25 + embeddings + RRF, LLM rerank, LLM-judged evaluation)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "openai>=1.40",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
